# LLM-Training

./: .gitignore  Dockerfile  README.md  Singularity.def  environment.yaml  install.sh  pyproject.toml
config/: phi-3_demo.yaml
config/examples/llama-3.1/: llama-3.1-8b_it_example.yaml  llama-3.1-8b_pt_example.yaml  llama-3.1-8b_tp_example.yaml
config/examples/phi-3/: phi-3-mini_dpo_example.yaml  phi-3-mini_example.yaml  phi-3-mini_it_example.yaml  phi-3-mini_orpo_example.yaml  phi-3-mini_pt_example.yaml  phi-3-mini_tp_example.yaml
config/phi-3/: phi-3-mini_example.yaml  phi-3-mini_it_example.yaml  phi-3-mini_pt_example.yaml
docs/: config.md  instruction_tuning.md  model_implementations.md  phi-3_example.md  phi3_example.md  pre_training.md
scripts/: convert_to_hf.py  pre_process_data.py  pre_process_pre_training_data.py  train.sh
src/llm_training/: __init__.py
src/llm_training/cli/: main.py
src/llm_training/data/: __init__.py  base_datacollator.py  base_datamodule.py  base_datamodule_config.py  resumable_dataloader.py
src/llm_training/data/chat_templates/: __init__.py  chatml.j2  gemma.j2  llama-2.j2  llama-3.1.j2  llama-3.2.j2  llama-3.j2  phi-3.j2  qwen2.5.j2  tulu-2.j2
src/llm_training/data/dummy/: __init__.py  dummy_datamodule.py  dummy_datamodule_config.py  dummy_dataset.py
src/llm_training/data/hf_based/: __init__.py  hf_based_datamodule.py  hf_based_datamodule_config.py
src/llm_training/data/instruction_tuning/: __init__.py  (+3 more)
src/llm_training/lightning/: __init__.py
src/llm_training/lms/: __init__.py  base_lm.py  base_lm_config.py  model_provider.py  utils.py
src/llm_training/lr_schedulers/: __init__.py  constant.py  cosine.py  linear.py  warmup.py
src/llm_training/metrics/: __init__.py  consumed_samples.py  consumed_tokens.py  metric.py  perplexity.py
src/llm_training/models/: __init__.py
src/llm_training/ops/: __init__.py  attention_op.py  cross_entropy_op.py  rms_norm_op.py  rope_op.py  rope_utils.py  swiglu_op.py  utils.py
src/llm_training/optim/: __init__.py  master_weight_wrapper.py
src/llm_training/overrides/: __init__.py
src/llm_training/utils/: __init__.py  config.py  context_managers.py  decorators.py  str_enum.py
(+95 files in other folders)
