[project]
name = "llm_training"
version = "0.0.1"
dependencies = [
  "accelerate>=0.28.0",
  "datasets>=2.20.0",
  "fire>=0.6.0",
  "flash-attn==2.5.9.post1",
  "jsonargparse[signatures]==4.28.0",
  "lightning==2.3.3",
  "omegaconf>=2.3.0",
  "protobuf>=4.25.3",
  "safetensors>=0.4.2",
  "sentencepiece>=0.2.0",
  "tabulate>=0.9.0",
  "tokenizers==0.19.1",
  "torch==2.3.1",
  "transformers==4.43.3",
  "triton==2.3.1",
  "wandb>=0.17.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
peft = ["peft>=0.11.1"]

deepspeed = ["deepspeed==0.14.3"]

[project.scripts]
llm-training = "llm_training.cli.main:main"
