[project]
name = "llm_training"
version = "1.0.0"
dependencies = [
  "accelerate>=0.28.0",
  "datasets>=2.20.0",
  "fire>=0.6.0",
  "flash-attn==2.6.3",
  "jsonargparse[signatures]==4.28.0",
  "lightning==2.2.5",
  "liger-kernel==0.1.1",
  "omegaconf>=2.3.0",
  "protobuf>=4.25.3",
  "pydantic>=2.8.2",
  "safetensors>=0.4.2",
  "sentencepiece>=0.2.0",
  "tabulate[widechars]>=0.9.0",
  "tokenizers>=0.15.2",
  "torch==2.3.1",
  "transformers==4.44.2",
  "triton==3.0.0",
  "wandb>=0.17.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
peft = ["peft>=0.11.1"]

deepspeed = ["deepspeed==0.14.5"]

[project.scripts]
llm-training = "llm_training.cli.main:main"
