[project]
name = "llm-training"
version = "0.2.0"
dependencies = [
  "accelerate>=1.1.1",
  "datasets>=3.1.0",
  "fire>=0.7.0",
  "flash-attn==2.7.0.post2",
  "jsonargparse[signatures]==4.34.1",
  "lightning==2.4.0",
  "liger-kernel==0.4.2",
  "omegaconf>=2.3.0",
  "protobuf>=5.29.0",
  "pydantic>=2.10.3",
  "safetensors>=0.4.5",
  "sentencepiece>=0.2.0",
  "tabulate[widechars]>=0.9.0",
  "tokenizers==0.20.0",
  "torch==2.5.1",
  "transformers==4.46.3",
  "triton==3.1.0",
  "wandb>=0.18.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
peft = ["peft>=0.13.2"]

deepspeed = ["deepspeed==0.16.0"]

[project.scripts]
llm-training = "llm_training.cli.main:main"
